@@ -8,6 +8,7 @@ Next
 - Add bounds attribute and ul() method (#11).
 - Add block_windows property (#7).
 - Enable windowed reads and writes (#6).
+- Use row,column ordering in window tuples as in Numpy (#13).
 
 0.2 (2013-11-24)
 ----------------
